# checkin-bot

./: .gitignore  pyproject.toml
checkin_bot/: bot.py  newbot.py
